# piqin

./: CMakeLists.txt  Doxyfile  README.md  game_shell.html  test.cpp
.old/blackjack/: Round.cpp
.old/blackjack/bj-objects/: CardSelector.cpp  Deck.cpp  Discard.cpp  Draw.cpp  Pather.cpp
.old/blackjack2/: Round.cpp
.old/testing/: Card.hpp  PlayerTest.hpp
.playground/aesprite/: card.aseprite  hearts-ace.aseprite  norton-card.aseprite
.protected/: cards.txt  comp.sh  game_shell.html  index.html  index.js  index.wasm  run.sh  txt2bin.sh
assets/: game_shell.html
assets/levels/world1/: all_levels.world  level1.json  level1.tiled-session  level1.tmx  level1.tsx  level2.json  level2.tmx  link.tx  output.lvl  world1.lvl  world1.tiled-session  world1.world
docs/: mainpage.md
docs/html/: _anim_box2_d_8cpp.html  _anim_box2_d_8hpp.html  _anim_box2_d_8hpp_source.html  _anim_info_8cpp.html  _anim_info_8hpp.html  _anim_info_8hpp_source.html  _asset-_card-_selector_8hpp.html  _asset-_card-_selector_8hpp.js  _asset-_card-_selector_8hpp_source.html  _asset-_card-_stack_8hpp.html  _asset-_card-_stack_8hpp.js  _asset-_card-_stack_8hpp_source.html  _asset-_deck_8hpp.html  _asset-_deck_8hpp.js  _asset-_deck_8hpp_source.html  _b_j-_actions_8cpp.html  _b_j-_actions_8cpp.js  _b_j-_card_logic_8cpp.html  _b_j-_input_8cpp.html  _b_j_constants_8hpp.html  _b_j_constants_8hpp.js  _b_j_constants_8hpp_source.html  _b_j_enums_8hpp.html  _b_j_enums_8hpp.js  _b_j_enums_8hpp_source.html  _background_8cpp.html  _background_8cpp.js  _background_8hpp.html  _background_8hpp.js  _background_8hpp_source.html  _background_palette_8hpp.html  _background_palette_8hpp.js  _background_palette_8hpp_source.html  _balloon_8cpp.html  _balloon_8hpp.html  _balloon_8hpp.js  _balloon_8hpp_source.html  _banner_8cpp.html  _banner_8hpp.html  _banner_8hpp.js  (+1081 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+137 more)
docs/latex/: _anim_box2_d_8cpp.tex  _anim_box2_d_8hpp.tex  _anim_box2_d_8hpp_source.tex  _anim_info_8cpp.tex  _anim_info_8hpp.tex  _anim_info_8hpp_source.tex  _asset-_card-_selector_8hpp.tex  _asset-_card-_selector_8hpp_source.tex  _asset-_card-_stack_8hpp.tex  _asset-_card-_stack_8hpp_source.tex  _asset-_deck_8hpp.tex  _asset-_deck_8hpp_source.tex  _b_j-_actions_8cpp.tex  _b_j-_card_logic_8cpp.tex  _b_j-_input_8cpp.tex  _b_j_constants_8hpp.tex  _b_j_constants_8hpp_source.tex  _b_j_enums_8hpp.tex  _b_j_enums_8hpp_source.tex  _background_8cpp.tex  _background_8hpp.tex  _background_8hpp_source.tex  _background_palette_8hpp.tex  _background_palette_8hpp_source.tex  _balloon_8cpp.tex  _balloon_8hpp.tex  _balloon_8hpp_source.tex  _banner_8cpp.tex  _banner_8hpp.tex  _banner_8hpp_source.tex  _banner_buffer_8cpp.tex  _banner_buffer_8hpp.tex  _banner_buffer_8hpp_source.tex  _banner_enums_8hpp.tex  _banner_enums_8hpp_source.tex  _banner_manager_8cpp.tex  _banner_manager_8hpp.tex  _banner_manager_8hpp_source.tex  _board_8cpp.tex  _board_8hpp.tex  (+558 more)
include/: Constants.hpp  Engine.hpp  EngineSource.hpp
include/engine/: Engine.hpp  Engine.inl  EngineContext.hpp  gan.hpp  gan_anim.hpp  gan_plugins.hpp  gan_std.hpp  geng.hpp
include/engine/core/: Engine.hpp  Engine.inl  EngineContext.hpp
include/engine/debug/: Console.hpp  DebugContext.hpp  DebugManager.hpp  DebugRouter.hpp  Debugger.hpp  LogHistory.hpp  geng_debug.hpp
include/engine/defaults/: DefaultSyntaxMap.hpp  GengColors.hpp  sysfont.inl
include/engine/effects/: Effect.hpp  EffectManager.hpp
include/engine/font/: FontChar.hpp
include/engine/gengine-globals/: EngineEnums.hpp  Random.hpp  Timer.hpp  scene.hpp
include/engine/input/: InputConstants.hpp  InputDistributor.hpp  InputHandler.hpp  InputManager.hpp  InputQueue.hpp  InputRouter.hpp  InputRouterInit.hpp  InputSource.hpp  InputTarget.hpp  Mouse.hpp
include/engine/layers/: Layer.hpp  LayerContext.hpp  LayerFlag.hpp  LayerInit.hpp  LayerList.hpp  LayerManager.hpp  LayerMap.hpp  LayerStack.hpp  LayerState.hpp
include/engine/mods/: BaseMods.hpp  Module.hpp  ModuleBundle.hpp  ModuleEnums.hpp  ModuleManager.hpp
include/engine/objects/: Object.hpp  ObjectManager.hpp  Path.hpp  Shake.hpp  Transform.hpp
include/engine/particles/: ParticleCircle.hpp  ParticleGroup.hpp  ParticleManager.hpp  ParticleRect.hpp  ParticleRhombus.hpp  ParticleSparkle.hpp
include/engine/render/: Camera.hpp  RenderManager.hpp
include/engine/rendering/: Camera.hpp  CameraTexture.hpp  DrawBatch.hpp  RenderBuffer.hpp  Renderer.hpp  ShadowBank.hpp
include/engine/scene/: Layer.hpp
include/engine/sprites/: Frame.hpp  FrameState.hpp  SheetManager.hpp  SpriteSheet.hpp
include/engine/text/: FontContainer.hpp
include/engine/textures/: Frame.hpp  FrameSheet.hpp  FrameState.hpp  Mesh.hpp  SheetManager.hpp
include/engine/types/: AnimBox2D.hpp  Gear.hpp  (+4 more)
include/game/: GameMaster.hpp
include/generics/: FrameState.hpp  Object.hpp  Path.hpp  Shake.hpp  Transform.hpp  Vertex.hpp
include/input/: InputConstants.hpp  InputManager.hpp  InputQueue.hpp  InputTarget.hpp
include/menu/: MenuRegion.hpp  Selector.hpp
include/scene/: ObjectManager.hpp
include/utilities/: IDStack.hpp  Utilities.hpp
src/: Card.cpp  Card.hpp  main.cpp
src/engine/: Engine.cpp
src/game/: GameMaster.cpp
src/generics/: Object.cpp  Path.cpp  Shake.cpp  Vertex.cpp
src/input/: InputManager.cpp
src/menu/: MenuRegion.cpp
src/scene/: ObjectManager.cpp
src/testing/: Card.cpp  Card.hpp  PlayerTest.hpp  camerarouter.hpp  spritesheet.hpp
src/utilities/: BasisDecoder.cpp  Utilities.cpp
xcode-test/: CMakeCache.txt  cmake_install.cmake
xcode-test/CMakeScripts/: ReRunCMake.make
xcode-test/norton.xcodeproj/: project.pbxproj
(+450 files in other folders)
